@@ -32,10 +32,8 @@ setup(name='Sonata',
         extra_link_args=capture("pkg-config --libs gtk+-2.0 pygtk-2.0").split()
          ),],
         scripts = ['sonata', 'mpdclient3.py'],
-        data_files=[('share/sonata',
-                        ['README', 'CHANGELOG', 'TODO', 'TRANSLATORS']),
-                    ('share/applications',
-                        ['sonata.desktop']),
-                    ('share/pixmaps',
-                        ['sonata.png', 'sonatacd.png'])],
+        data_files=[('share/sonata', ['README', 'CHANGELOG', 'TODO', 'TRANSLATORS']),
+                    ('share/applications', ['sonata.desktop']),
+                    ('share/pixmaps', ['sonata.png', 'sonatacd.png']),
+                    ('share/locale/fr/LC_MESSAGES', ['locale/fr/LC_MESSAGES/sonata.mo'])],
         )
